tests/baselines/reference/parseCommaSeparatedNewlineNumber.errors.txt
tests/cases/compiler/parseCommaSeparatedNewlineNumber.ts(1,2): error TS2304: Cannot find name 'a'.
tests/cases/compiler/parseCommaSeparatedNewlineNumber.ts(1,2): error TS2695: Left side of comma operator is unused and has no side effects.


==== tests/cases/compiler/parseCommaSeparatedNewlineNumber.ts (2 errors) ====
    (a,
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    1)